--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body
 {
     font-family: "Orbitron", sans-serif;
     font-optical-sizing: auto;
-    background-color: #0a0a0a;
+    background-color: #181818;
     width:fit-content;
 }
 
